--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@
 .bottom h3 {
   font-weight: 300;
 }
+.text{
+  /*text-decoration: overline underline;*/
+  font-size: 20px;
+  fill: white;
+}
 
 body {
   margin: 0;
@@ -21,6 +26,15 @@ body {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+}
+svg{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  z-index: 100;
 }
 
 div[class^="slide"] {
@@ -48,6 +62,16 @@ div[class^="slide"] {
           transform: scale(0.8);
   position: absolute;
 }
+
+.line{
+  stroke-width: 3;
+  stroke: black;
+}
+.rect{
+  fill: yellow;
+  opacity: 0.3;
+}
+
 
 .slide p{
   width: 60%;
