--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,7 @@ div[class^="slide"] {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  z-index: 500;
 }
 .zak .img {
   width: 40%;
